tests/ucc/type/good/int-assign.c
int main(void)
{
    int a = 1;
    int b = 1;
    int c;

    c = a = b;

    return 0;
}
